# Python.Trading.Telegram.Annotations

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  pre-commit.yml
tests/: bot-no-args.py  main.py  my.py  test_bot.py  test_handler.py
tests/handlers/: bye.py  hello.py
venantvr/: __init__.py
venantvr/telegram/: __init__.py  bot.py  config.py  decorators.py  handler.py  protocols.py
venantvr/telegram/classes/: __init__.py  command.py  enums.py  menu.py  types.py
venantvr/telegram/tools/: logger.py
