[build-system]
# Ces lignes indiquent à pip d'utiliser setuptools pour construire votre paquet
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Métadonnées du projet (équivalent des arguments de setup() )
name = "Python.Trading.Telegram.Annotations"
version = "0.1.0"
description = "Une bibliothèque Python pour Telegram."
requires-python = ">=3.8"
dependencies = []  # Équivalent de install_requires, vide dans votre cas
authors = [
    { name = "venantvr", email = "venantvr@gmail.com" },
]
urls = { Homepage = "https://github.com/venantvr/Python.Trading.Telegram.Annotations" }

[tool.setuptools.packages.find]
# Cette table est l'équivalent moderne de packages=find_packages()
# Elle indique à setuptools de chercher automatiquement les paquets dans le répertoire